build: Update jvm.config (#1856)
* build: Update jvm.config

Signed-off-by: 梦里不知身是客 <liang.tang.cx@gmail.com>

* Update jvm.config

Signed-off-by: 梦里不知身是客 <liang.tang.cx@gmail.com>

---------

Signed-off-by: 梦里不知身是客 <liang.tang.cx@gmail.com>