@@ -1,8 +1,9 @@
 -Xmx1024m
--Xms512m
+-Xms1024m
 -XX:+UnlockDiagnosticVMOptions
 -XX:+ExitOnOutOfMemoryError
 -XX:+IgnoreUnrecognizedVMOptions
 -XX:+UseCodeCacheFlushing
 -XX:-TieredCompilation
 -XX:TieredStopAtLevel=1
+-XX:+UseZGC
